# hospitals

./: .gitignore  README.md  pyproject.toml  run.sh
.github/workflows/: daily.yml  pages.yml
daily_schedules/attica/: 2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  index.json
dev/: dump_pdf.py
docs/superpowers/plans/: 2026-06-16-hospitals-attica-efimeries-tracker.md  2026-06-16-phase2-data-pipeline.md
docs/superpowers/specs/: 2026-06-16-hospitals-attica-efimeries-tracker-design.md  2026-06-16-phase2-data-pipeline-design.md
hospitals/: constants.py  fetcher.py  main.py  models.py  parser.py  store.py  windows.py
scripts/: generate_schedule.py
web/: app.js  index.html  manifest.webmanifest  style.css  sw.js
